--- a/pages.html
+++ b/pages.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Pages 
+title: Index 
 header: Pages
-group: navigation
+<!--group: navigation-->
 ---
 {% include JB/setup %}
 
