--- a/africa.html
+++ b/africa.html
@@ -1,10 +1,7 @@
 ---
-theme :
-  name : bootstrap-3
-layout : default
+layout: page
 title: Africa
 group: navigation
-description: > # this means to ignore newlines until "baseurl:"
-  You have reached the 
+tagline: <p><p> Kenya, Uganda, Rwanda, Tanzania, Zambia, Zimbabwe, Botswana, Namibia and South Africa </p>
 ---
 {% include JB/setup %}
