--- a/north_america.html
+++ b/north_america.html
@@ -1,10 +1,7 @@
 ---
-theme :
-  name : bootstrap-3
-layout : default
+layout : page
 title: North America
 group: navigation
-description: > # this means to ignore newlines until "baseurl:"
-  You have reached the 
+tagline: <p><p> Canada, United States and Mexico </p>
 ---
 {% include JB/setup %}
