--- a/asia.html
+++ b/asia.html
@@ -1,10 +1,7 @@
 ---
-theme :
-  name : bootstrap-3
-layout : default
+layout : page
 title: Asia
 group: navigation
-description: > # this means to ignore newlines until "baseurl:"
-  You have reached the 
+tagline: <p><p> Indonesia, Malaysia, Singapore, Thailand, Laos, Cambodia, Myanmar (Burma) and India </p>
 ---
 {% include JB/setup %}
