--- a/central_america.html
+++ b/central_america.html
@@ -1,10 +1,7 @@
 ---
-theme :
-  name : bootstrap-3
-layout : default
+layout : page
 title: Central America
 group: navigation
-description: > # this means to ignore newlines until "baseurl:"
-  You have reached the 
+tagline: <p><p> Guatemala, Belize, El Salvador, Honduras, Nicaragua, Costa Rica and Panama </p>
 ---
 {% include JB/setup %}
