--- a/south_america.html
+++ b/south_america.html
@@ -1,10 +1,7 @@
 ---
-theme :
-  name : bootstrap-3
-layout : default
+layout : page
 title: South America
 group: navigation
-description: > # this means to ignore newlines until "baseurl:"
-  You have reached the 
+tagline: <p><p> Paraguay, Brazil, Argentina, Uruguay and Peru </p>
 ---
 {% include JB/setup %}
