--- a/south_pacific.html
+++ b/south_pacific.html
@@ -1,10 +1,13 @@
 ---
-theme :
-  name : bootstrap-3
-layout : default
+layout : page
 title: South Pacific
 group: navigation
-description: > # this means to ignore newlines until "baseurl:"
-  You have reached the 
+tagline: <p><p> Tahiti & French Polynesia, Papau New Guinea, Australia and New Zealand </p>
 ---
 {% include JB/setup %}
+<div><center>
+{% img class /pictures/south_pacific.JPG 'South Pacific Map' 'alt text' %}
+{% imgpopup /pictures/south_pacific.JPG 60% South Pacific Map %}
+</center></div>
+<center> <h3>South Pacific Map</h3> </center>
+<center>(Colored Countries - where we have been)</center>
