--- a/middle_east.html
+++ b/middle_east.html
@@ -4,9 +4,8 @@ title: Middle East
 tagline: <p><p> Oman, United Arab Emirates, Jordan, Israel, Egypt, Cyprus and Turkey </p>
 ---
 {% include JB/setup %}
-
 <div><center>
-{% img class /pictures/middle_east.JPG 'Middle East Map' 'alt text' %}
+{% img class /pictures/middle_east/middle_east.JPG 'Middle East Map' 'alt text' %}
 </center></div>
 <center> <h3>Middle East Map</h3> </center>
 <center>(Colored Countries - where we have been)</center>
