--- a/south_pacific.html
+++ b/south_pacific.html
@@ -6,7 +6,7 @@ tagline: <p><p> Tahiti & French Polynesia, Papau New Guinea, Australia and New Z
 ---
 {% include JB/setup %}
 <div><center>
-{% img class /pictures/south_pacific.JPG 'South Pacific Map' 'alt text' %}
+{% img class /pictures/south_pacific/south_pacific.JPG 'South Pacific Map' 'alt text' %}
 </center></div>
 <center> <h3>South Pacific Map</h3> </center>
 <center>(Colored Countries - where we have been)</center>
