--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ any other subject remotely related to it.  My inquisitive nature and the urge fo
 <!-- DO NOT TOUCH -->
 
 <div><center>
-<img class="class" src="/pictures/best/DSC08351.JPG" title="Cancun, Mexico" alt="[Picture]">
+<img class="class" src="{{site.baseurl}}/pictures/best/DSC08351.JPG" title="Cancun, Mexico" alt="[Picture]">
 </center></div>
 
 <p><center> Brooke (left), Joyce (center),  Kristan (right)</center>
@@ -243,9 +243,9 @@ rest of world!</p>
 
 <p><hr>
 <h1> Navigating </h1>
-The site is broken up into regions around the world that we have traveled: <a href="/north_america.html">North America</a>, <a href="/central_america.html">Central America</a>,
-<a href="http://kristanarmstrong.github.io/recherchetravel.github.com/south_america.html">South America</a>, <a href="/asia.html">Asia</a>, <a href="/middle_east.html">Middle East</a>, <a href="/africa.html">Africa</a> and the
-<a href="/south_pacific.html">South Pacific</a>. Once you find the region you&#39;re most interested in just click on the link or use the navigation bar above and enjoy!</p>
+The site is broken up into regions around the world that we have traveled: <a href="http://kristanarmstrong.github.io/recherchetravel.github.com/north_america.html">North America</a>, <a href="http://kristanarmstrong.github.io/recherchetravel.github.com/central_america.html">Central America</a>,
+<a href="http://kristanarmstrong.github.io/recherchetravel.github.com/south_america.html">South America</a>, <a href="/asia.html">Asia</a>, <a href="http://kristanarmstrong.github.io/recherchetravel.github.com/middle_east.html">Middle East</a>, <a href="http://kristanarmstrong.github.io/recherchetravel.github.com/africa.html">Africa</a> and the
+<a href="http://kristanarmstrong.github.io/recherchetravel.github.com/south_pacific.html">South Pacific</a>. Once you find the region you&#39;re most interested in just click on the link or use the navigation bar above and enjoy!</p>
 
 <p>As we continue traveling around the world more pages will be added... Please feel free to send us suggestions on our next point of interest.</p>
 
