--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ any other subject remotely related to it.  My inquisitive nature and the urge fo
 <!-- DO NOT TOUCH -->
 
 <div><center>
-<img class="class" src="{{site.baseurl}}/pictures/best/DSC08351.JPG" title="Cancun, Mexico" alt="[Picture]">
+<img class="class {{site.baseurl}}/pictures/best/DSC08351.JPG 'Cancun, Mexico'" src="'{{site.baseurl}}/pictures/best/DSC08351.JPG'">
 </center></div>
 
 <p><center> Brooke (left), Joyce (center),  Kristan (right)</center>
