--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ any other subject remotely related to it.  My inquisitive nature and the urge fo
 <!-- DO NOT TOUCH -->
 
 <div><center>
-<img class="class http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/best/DSC08351.JPG 'Cancun, Mexico'" src="'{{site.baseurl}}/pictures/best/DSC08351.JPG'">
+<img class="class /pictures/best/DSC08351.JPG 'Cancun, Mexico'" src="'{{site.baseurl}}/pictures/best/DSC08351.JPG'">
 </center></div>
 
 <p><center> Brooke (left), Joyce (center),  Kristan (right)</center>
