--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="/assets/themes/bootstrap-3/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Sticky Footer -->
     <link href="/assets/themes/bootstrap-3/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
-    
+
     <!-- Custom styles -->
     <link href="/assets/themes/bootstrap-3/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
@@ -41,6 +41,13 @@
     <!-- atom & rss feed -->
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="/rss.xml" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+
+    <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+    </script>
+    <script src="picturefill.js" async></script>
+    <script src="/assets/picturefill.js"></script>
 
 
   </head>
@@ -210,14 +217,15 @@ year before applying to CU - Boulder.  This wasn&#39;t because I had hard time l
 on what I could push my body to do than what I could push my brain to do.  I never had physics or chemistry in high school, so of course I never dreamed that I would get a degree in Physics or
 any other subject remotely related to it.  My inquisitive nature and the urge for discovery lead me down that path, as well as, many other avenues which I will share with you soon...</p>
 
-<!--![Cancun, Mexico](/pictures/DSC08351.JPG)-->  
+<!--![Cancun, Mexico](/pictures/DSC08351.JPG)  <img class="class" src="{{site.JB.BASE_PATH}}/pictures/best/DSC08351.JPG" title="Cancun, Mexico" alt="[Picture]">-->  
 
 <p>Now I know that was a little long winded and you&#39;re probably wondering when I am going to introduce my family.  Well first off, here we all are:</p>
 
 <!-- DO NOT TOUCH -->
 
 <div><center>
-<img class="class {{site.JB.BASE_PATH}}/pictures/best/DSC08351.JPG 'Cancun, Mexico'" src="'/pictures/best/DSC08351.JPG'">
+<img sizes="(min-width: 40em) 80vw, 100vw"
+srcset="/pictures/best/DSC08351_small.JPG 375w, /pictures/best/DSC08351_medium.JPG 580w, /pictures/best/DSC08351.JPG 768w" alt="Cancun, Mexico">
 </center></div>
 
 <p><center> Brooke (left), Joyce (center),  Kristan (right)</center>
