--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ any other subject remotely related to it.  My inquisitive nature and the urge fo
 
 <div><center>
 <img sizes="(min-width: 40em) 80vw, 100vw"
-srcset="/pictures/best/DSC08351_small.JPG 375w, /pictures/best/DSC08351_medium.JPG 580w, /pictures/best/DSC08351.JPG 768w" alt="Cancun, Mexico">
+srcset="http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/best/DSC08351_small.JPG 375w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/best/DSC08351_medium.JPG 580w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/best/DSC08351.JPG 768w" alt="Cancun, Mexico">
 </center></div>
 
 <p><center> Brooke (left), Joyce (center),  Kristan (right)</center>
