--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap styles -->
-    <link href="/assets/themes/bootstrap-3/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/recherchetravel.github.com/assets/themes/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Optional theme -->
-    <link href="/assets/themes/bootstrap-3/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/recherchetravel.github.com/assets/themes/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- Sticky Footer -->
-    <link href="/assets/themes/bootstrap-3/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
+    <link href="/recherchetravel.github.com/assets/themes/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="/assets/themes/bootstrap-3/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="/recherchetravel.github.com/assets/themes/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -204,6 +204,8 @@
   <div class="col-xs-12">
     <p>Recherch&eacute; Travel is focused on travel for the adventurous at heart.  Recherch&eacute; in itself means rare, exotic or obscure and that&#39;s exactly how my family and I love to travel.  This travel blog is based on our personal experiences traveling around the world to over 60 different countries as three blonde women ALONE!</p>
 
+<p>/recherchetravel.github.com  </p>
+
 <!-- YOU CAN EDIT ANYTHING BELOW HERE -->
 
 <p>Let me introduce myself, I&#39;m Kristan Armstrong and I&#39;m the daughter of an outrageously adventurous woman who has been an avid traveler her whole life.  Some people just have the travel bug
@@ -283,7 +285,7 @@ Life&#39;s not worth living if you&#39;re too scared to push the boundaries.</p>
     <!-- Latest compiled and minified JavaScript, requires jQuery 1.x (2.x not supported in IE8) -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/assets/themes/bootstrap-3/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/recherchetravel.github.com/assets/themes/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
 
