--- a/central_america.html
+++ b/central_america.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,8 +40,8 @@
     -->
 
     <!-- atom & rss feed -->
-    <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
-    <link href="/rss.xml" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+    <link href="http://kristanarmstrong.github.io/recherchetravel.github.com/atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+    <link href="http://kristanarmstrong.github.io/recherchetravel.github.com/rss.xml" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
     <script>
     // Picture element HTML5 shiv
@@ -197,6 +198,7 @@
 
       <div class="container">
         
+
 <div class="page-header">
   <h1>Central America  <small><p><p> Guatemala, Belize, El Salvador, Honduras, Nicaragua, Costa Rica and Panama </p></small></h1>
 </div>
@@ -204,6 +206,7 @@
 <div class="row">
   <div class="col-xs-12">
     
+
   </div>
 </div>
 
