--- a/middle_east.html
+++ b/middle_east.html
@@ -208,7 +208,8 @@
     
 
 <div><center>
-<img class="class" src="/pictures/middle_east/middle_east.JPG" title="Middle East Map" alt="alt text">
+  <img sizes="(min-width: 40em) 80vw, 100vw"
+  srcset="http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east_small.JPG 375w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east_medium.JPG 580w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east.JPG 768w" alt="Map of Middle East">
 </center></div>
 <center> <h3>Middle East Map</h3> </center>
 <center>(Colored Countries - where we have been)</center>
