changed default/setup site.baseurl check original

--- a/middle_east.html
+++ b/middle_east.html
@@ -207,9 +207,10 @@
   <div class="col-xs-12">
     
 
+http://kristanarmstrong.github.io/recherchetravel.github.com
 <div><center>
   <img sizes="(min-width: 40em) 80vw, 100vw"
-  srcset="http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east_small.JPG 375w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east_medium.JPG 580w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east.JPG 768w" alt="Map of Middle East">
+  srcset="http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east_small.jpg 375w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east_medium.jpg 580w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/middle_east/middle_east.jpg 768w" alt="Map of Middle East">
 </center></div>
 <center> <h3>Middle East Map</h3> </center>
 <center>(Colored Countries - where we have been)</center>
