--- a/south_pacific.html
+++ b/south_pacific.html
@@ -208,7 +208,8 @@
     
 
 <div><center>
-<img class="class" src="/pictures/south_pacific/south_pacific.JPG" title="South Pacific Map" alt="alt text">
+  <img sizes="(min-width: 40em) 80vw, 100vw"
+    srcset="http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/south_pacific/south_pacific_small.jpg 375w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/south_pacific/south_pacific_medium.jpg 580w, http://kristanarmstrong.github.io/recherchetravel.github.com/pictures/south_pacific/south_pacific.jpg 768w" alt="Map of South Pacific">
 </center></div>
 <center> <h3>South Pacific Map</h3> </center>
 <center>(Colored Countries - where we have been)</center>
