--- a/south_pacific.html
+++ b/south_pacific.html
@@ -6,7 +6,8 @@ tagline: <p><p> Tahiti & French Polynesia, Papau New Guinea, Australia and New Z
 ---
 {% include JB/setup %}
 <div><center>
-{% img class /pictures/south_pacific/south_pacific.JPG 'South Pacific Map' 'alt text' %}
+  <img sizes="(min-width: 40em) 80vw, 100vw"
+    srcset="{{BASE_PATH}}/pictures/south_pacific/south_pacific_small.jpg 375w, {{BASE_PATH}}/pictures/south_pacific/south_pacific_medium.jpg 580w, {{BASE_PATH}}/pictures/south_pacific/south_pacific.jpg 768w" alt="Map of South Pacific">
 </center></div>
 <center> <h3>South Pacific Map</h3> </center>
 <center>(Colored Countries - where we have been)</center>
